// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Profiles /> renders the <Profiles /> with populated data 1`] = `
<div
  class="profiles__Container-uichg9-0 fqWmpI"
>
  <h1
    class="profiles__Title-uichg9-1 cPWOxC"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-uichg9-2 jVvytz"
  >
    <li
      class="profiles__Item-uichg9-5 krXUsg"
    >
      <img
        class="profiles__Picture-uichg9-4 cmANmw"
        data-testid="profile-picture"
        src="/images/users//images/karl.png.png"
      />
      <p
        class="profiles__Name-uichg9-3 hfQYxj"
      >
        Karl
      </p>
    </li>
  </ul>
</div>
`;

exports[`<Profiles /> renders the <Profiles /> with populated data but misc profile image 1`] = `
<div
  class="profiles__Container-uichg9-0 fqWmpI"
>
  <h1
    class="profiles__Title-uichg9-1 cPWOxC"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-uichg9-2 jVvytz"
  >
    <li
      class="profiles__Item-uichg9-5 krXUsg"
    >
      <img
        class="profiles__Picture-uichg9-4 cmANmw"
        data-testid="profile-picture-misc"
        src="/images/misc/loading.gif"
      />
      <p
        class="profiles__Name-uichg9-3 hfQYxj"
      >
        Karl
      </p>
    </li>
  </ul>
</div>
`;
